--- a/views/oracle/index.html
+++ b/views/oracle/index.html
@@ -41,42 +41,31 @@
         </a>
       </div>
 
-      <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item"> Home </a>
-
-          <a class="navbar-item"> Documentation </a>
-
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link"> More </a>
-
-            <div class="navbar-dropdown">
-              <a class="navbar-item"> About </a>
-              <a class="navbar-item"> Jobs </a>
-              <a class="navbar-item"> Contact </a>
-              <hr class="navbar-divider" />
-              <a class="navbar-item"> Report an issue </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              <a class="button is-primary">
-                <strong>Sign up</strong>
-              </a>
-              <a class="button is-light"> Log in </a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="navbarBasicExample" class="navbar-menu"></div>
     </nav>
-    <section class="section">
-      <div class="container">
-        <h1 class="title">Hello World</h1>
-        <p class="subtitle">My first website with <strong>Bulma</strong>!</p>
+    <div class="container is-fluid">
+      <div class="notification is-primary">
+        This is sample oracle api server for testing purpose. Required oracle
+        client configuration in your pc.
       </div>
-    </section>
+      <div class="content">
+        <ul>
+          <li>
+            <code>GET /api/</code>
+            <p>Sample select query result</p>
+            <pre>
+          SELECT * FROM TEST WHERE SNO = 1;
+            </pre>
+          </li>
+          <li>
+            <code>GET /api/:id</code>
+            <p>Sample select query result with where</p>
+            <pre>
+          SELECT * FROM TEST WHERE SNO = 1;
+            </pre>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
